fixed content on course pages

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
         <div class="container">
           <div class="row">
-            <h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
+            <h4 class="title text-center">神戸・三宮の英会話サンミハールランゲージサービス</h4>
             <div class="col-md-4">
               <h3 class="title">
                 あなたの次の目標達成のためにぴったりあった料金プランをご提案します。
