--- a/lesson-course-airline.html
+++ b/lesson-course-airline.html
@@ -465,6 +465,13 @@
 											ICAO-International Civil Aviation Organization（国際民間航空機関）の略。国連の専門機関の1つ。2008年3月以降、操縦士や管制官等は航空英語能力を証明することが要件となり、語学能力レベルは6段階のうち、実用レベル（レベル4）以上であることが必要です。実用レベル（level-4）の証明の有効期間は3年。また国土交通省の東京航空局、大阪航空局の両局内の情報官の一部の方々にもICAO標準航空英語のlevel-4(Operational
 											level)が必要とされるようになりました。残念ながら、必須である言語技能の習得に関しては個人的に試験対策本などを利用して行うより方途がなかったのですが、神戸ではサンミハールが初めて「ICAO標準航空英語試験の対策プログラム」を実試験の形式に沿った会話形式で行うようになりパイロットを始め、これから航空業界で働きたいと思っている方々にもお役に立っています。
 										</p>
+									</div>
+									<div class="col-md-4 u-float-right">
+										<div class="card-image">
+											<img class="img img-raised" src="assets/img/examples/icao.jpg" />
+										</div>
+									</div>
+									<div class="col-md-8 u-float-left">
 										<h4>授業内容</h4>
 										<ol>
 											<li>Single Picture Card</li>
@@ -726,7 +733,7 @@
 							</div>
 
 							<div class="form-group label-floating">
-<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
+								<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
 								<textarea name="message" class="form-control" rows="4" required></textarea>
 							</div>
 
