--- a/lesson-course-medical.html
+++ b/lesson-course-medical.html
@@ -404,10 +404,11 @@
 									</div>
 									<div class="col-md-8">
 										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="#">看護師の英会話</a>
+											<!-- <a href="#">看護師の英会話</a> -->
 										</h3>
 										<ul>
 											<li>
+												<h4>看護師の英会話</h4>
 												<ul>
 													<li>院内での外国人患者との会話</li>
 													<li>海外の病院での研修準備</li>
@@ -677,7 +678,7 @@
 							</div>
 
 							<div class="form-group label-floating">
-<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
+								<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
 								<textarea name="message" class="form-control" rows="4" required></textarea>
 							</div>
 
