--- a/lesson-course-toeic.html
+++ b/lesson-course-toeic.html
@@ -475,7 +475,17 @@
 										</h3>
 										<p>
 											神戸・三宮の英会話サンミハールランゲージサービスは神戸三宮で一番にIELTS（アイエルツ）対策コースを開始したスクールです。IELTS（アイエルツ）のスピーキングと同時にIELTS（アイエルツ）のリーディングやIELTS（アイエルツ）のリスニングでのメモの取り方も授業で学べます。また、IELTSのライティングのポイントは授業で実際の作文の作業は自宅または空き教室で行うので大変経済的です。TOEFL（トフル）対策と同様、各セクションの対策を全般的に行う、または、個々の能力によって必要なセクション用の対策を別々に行うことが出来ます。
-											IELTS （アイエルツ）5.0、5.5、6.0、6.5、7.0、7.5、8.0、8.5、9.0　目標の方の対策です。<br> IELTS （アイエルツ）　ボキャビル対策（語彙を増やす）<br>											IELTS（アイエルツ） リスニング対策<br> IELTS （アイエルツ）リーディング対策<br> IELTS （アイエルツ）ライティング（作文）対策<br> IELTS （アイエルツ）スピーキング対策<br>											例えば、
+											IELTS （アイエルツ）5.0、5.5、6.0、6.5、7.0、7.5、8.0、8.5、9.0　目標の方の対策です。
+										</p>
+										<ol>
+											<li>IELTS （アイエルツ）　ボキャビル対策（語彙を増やす</li>
+											<li>IELTS（アイエルツ） リスニング対策</li>
+											<li>IELTS （アイエルツ）リーディング対策</li>
+											<li>IELTS （アイエルツ）ライティング（作文）対策</li>
+											<li>IELTS （アイエルツ）スピーキング対策</li>
+										</ol>
+										<p>
+											例えば、
 											<br> ライティングのトレーニング
 											<br> ほとんどの部分は宿題で行われます。 アカデミック・モジュールのTASK1は図や表からの読み取れる内容についての解説です。TASK2はトピックに対して自分の意見を理由をつけて述べる問題です。2つのタスクにはそれぞれの文章の冒頭に来るつなぎ言葉（transition
 											words）が違います。最適なつなぎ言葉を使用することによって得点アップに繋がりますので、自分なりのひな型を作ってしまい、本文にフォーカス出来る時間を作ることが短期間での対策には効果的です。
@@ -732,7 +742,7 @@
 							</div>
 
 							<div class="form-group label-floating">
-<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
+								<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
 								<textarea name="message" class="form-control" rows="4" required></textarea>
 							</div>
 
