--- a/lesson-course-travel.html
+++ b/lesson-course-travel.html
@@ -393,7 +393,7 @@
 											<li>
 												<h4>海外の大学・大学院留学</h4>
 												<p>上記の語学留学の内容に加えて、TOEFL・ IELTSの対策を行います。TOEFL・ IELTSで入学基準を満たしている方は、大学での授業の受け方、レポートの書き方など、よりアカデミックな内容を学びます。<br>
-													<a href="lesson-course-toeic"></a>→ TOEFL・IELTS対策のページ </a>
+													<a href="lesson-course-toeic.html">→ TOEFL・IELTS対策のページ </a>
 												</p>
 											</li>
 											<li>
@@ -461,14 +461,10 @@
 											<a href="#">子供英会話</a>
 										</h3>
 										<p>
-											<strong>
-												英語の習得は早ければ早い程良いと言われていますが、例えば２歳から２年間英会話スクールに通っても、幼稚園で友達との遊びや他の習い事に興味を持ち始めやめてしまうパターンが多いのが現状です。
-											</strong>
+											英語の習得は早ければ早い程良いと言われていますが、例えば２歳から２年間英会話スクールに通っても、幼稚園で友達との遊びや他の習い事に興味を持ち始めやめてしまうパターンが多いのが現状です。
 										</p>
 										<p>
-											<strong>
-												幼児期は物事の吸収は早いですが、他に興味が移ってしまえば忘れるのも早いです。語学力は継続によって維持されますから子供達のモチベーションをキープし、次のステップへつなげていくことが大切です。サンミハールでは日本語の読み書きがある程度出来るようになった小学校高学年から英会話のレッスンを始め、中学英語に繋げることを推奨しています。小学４年、５年生で楽しく英会話をすることを学び、６年生で中学英語を会話ベースで学びます。中学校で優秀な成績を修めることで英会話だけでなく読み書き文法を含んだ英語を学ぶ楽しみを覚え高校留学または大学留学へと繋がっていった卒業生の方がたくさんいます。
-											</strong>
+											幼児期は物事の吸収は早いですが、他に興味が移ってしまえば忘れるのも早いです。語学力は継続によって維持されますから子供達のモチベーションをキープし、次のステップへつなげていくことが大切です。サンミハールでは日本語の読み書きがある程度出来るようになった小学校高学年から英会話のレッスンを始め、中学英語に繋げることを推奨しています。小学４年、５年生で楽しく英会話をすることを学び、６年生で中学英語を会話ベースで学びます。中学校で優秀な成績を修めることで英会話だけでなく読み書き文法を含んだ英語を学ぶ楽しみを覚え高校留学または大学留学へと繋がっていった卒業生の方がたくさんいます。
 										</p>
 										<ul>
 											<li>
@@ -728,7 +724,7 @@
 							</div>
 
 							<div class="form-group label-floating">
-<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
+								<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
 								<textarea name="message" class="form-control" rows="4" required></textarea>
 							</div>
 
