--- a/lesson-course-everyday.html
+++ b/lesson-course-everyday.html
@@ -362,7 +362,7 @@
 					<div class="row">
 
 						<div class="col-md-10 col-md-offset-1">
-							<h2 class="title">日常英会話・ビジネス英会話</h2>
+							<h2 class="title">日常英会話・ビジネス英会話・海外赴任準備</h2>
 
 							<br />
 							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="kaiwa"></div>
@@ -733,7 +733,7 @@
 							</div>
 
 							<div class="form-group label-floating">
-<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
+								<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
 								<textarea name="message" class="form-control" rows="4" required></textarea>
 							</div>
 
