Fixed big screen issue on about page

--- a/about.html
+++ b/about.html
@@ -250,7 +250,7 @@
 		</div>
 	</div>
 
-	<div class="main main-raised">
+	<div class="main main-raised" style="clear: both;">
 
 		<!--     *********     PRESIDENT'S MESSAGE     *********      -->
 
@@ -641,7 +641,7 @@
 							</div>
 
 							<div class="form-group label-floating">
-<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
+								<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
 								<textarea name="message" class="form-control" rows="4" required></textarea>
 							</div>
 
