--- a/index.html
+++ b/index.html
@@ -809,8 +809,8 @@
                 </div>
                 <div class="description">
                   <h4 class="info-title">デイリーテーマ</h4>
-                  <p>For the availablity and theme of our free conversation classes, please check out our
-                    Facebook events page.</p>
+                  <p>皆様から募集したフリーカンバセーションのテーマをそのまま掲載しています。（文章の正誤は授業の時、先生に聞いてね。）応募はメールでも受付しています。<br>
+                  <a href="mailto:study@sunmihall.com">今、メールでテーマを送る。</a></p>
                 </div>
               </div>
 
@@ -820,9 +820,7 @@
                 </div>
                 <div class="description">
                   <h4 class="info-title">イベント</h4>
-                  <p>Here at Sun Mihall, we hold various seasonal events for our students to gather and
-                    get to know each other, as well as being a great chance to socialise and mingle with
-                    the teachers and staff from Sun Mihall.</p>
+                  <p>サンミハールでは、クリスマスパーティー他生徒さん同士が交流するための季節ごとのイベントを開催しています。教師、スタッフ皆で英語を話したり、他の皆さんがどんな勉強をしているのかなどを知る絶好のチャンスです。</p>
                 </div>
               </div>
             </div>
