Navbars edited and everyday conversation updated.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               </li>
               <li>
                 <a href="#pricing">
-                  料金と時間割
+                  おすすめプラン
                 </a>
               </li>
               <li>
@@ -137,11 +137,11 @@
                   生徒さんの声
                 </a>
               </li>
-              <!-- <li>
+              <li>
                 <a href="#events">
-                  イベント
+                  デイリーテーマ
                 </a>
-              </li> -->
+              </li>
               <li>
                 <a href="#team">
                   チーム
@@ -289,16 +289,6 @@
       <div id="features" class="section">
 
         <h4 class="title text-center">神戸・三宮の英会話サンミハールランゲージサービス</h4>
-
-        <!-- DAILY THEME -->
-        <!-- <div class="row text-center">
-          <div class="col-md-8 col-md-offset-2">
-
-            <h4 id="totd-date"></h4>
-            <h2 id="totd-textbox"></h2>
-          </div>
-        </div> -->
-
         <div class="row">
           <div class="col-md-4">
             <div class="info">
@@ -955,7 +945,7 @@
         <a href="https://www.youtube.com/watch?v=MreeiBt7yMM&list=UUUDPTYAJh42HoaeHtKXQv1w&index=2" target="_blank"
           class="btn btn-danger btn-raised" style="width: 200px">
           <i class="fa fa-play">　</i>Matt先生　</a>
-        <a href="about.html" class="btn btn-primary btn-raised" style="width: 200px">About</a>
+          <a href="about.html" class="btn btn-primary btn-raised" style="width: 200px">校長ご挨拶</a>
 
       </div>
     </div>
@@ -1082,13 +1072,13 @@
                 <div class="row">
                   <div class="col-md-12">
                     <div class="form-group label-floating">
-                      <label class="control-label">折り返しのお電話ご希望の時間帯</label>
+                      <label class="control-label">折り返しのお電話ご希望の時間帯（任意）</label>
                       <input name="time" type="text" class="form-control">
                     </div>
                   </div>
                 </div>
                 <div class="form-group label-floating">
-                  <label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
+                  <label class="control-label">お問い合わせ内容</label>
                   <textarea name="message" class="form-control" id="message" rows="6" required></textarea>
                 </div>
 
