--- a/lesson-course-everyday.html
+++ b/lesson-course-everyday.html
@@ -105,7 +105,7 @@
 							</li>
 							<li>
 								<a href="index.html#pricing">
-									料金と時間割
+									おすすめプラン
 								</a>
 							</li>
 							<li>
@@ -116,6 +116,11 @@
 							<li>
 								<a href="index.html#testimonials">
 									生徒さんの声
+								</a>
+							</li>
+							<li>
+								<a href="#events">
+									デイリーテーマ
 								</a>
 							</li>
 							<li>
@@ -263,24 +268,19 @@
 							<a href="#business" class="btn btn-primary btn-round" style="width: 100%">ビジネス英会話</a>
 							<a href="#prep" class="btn btn-primary btn-round" style="width: 100%">海外赴任準備</a>
 						</div>
-						<!-- <div class="col-md-8 col-md-offset-1">
-							<h5>TOEIC（トーイック）、英検、TOEFL（トフル）、IELTS（アイエルツ）他各種試験対策を経験豊かなネイティブ講師の指導と日本人スタッフによる無料のカウンセリングで目標達成！<br><br>
-
-								★ 試験対策をサンミハールに決めた理由<br>
-								① 無料体験レッスンで、実際のテスト形式の授業を受けて自分にもできると思えた。<br>
-								② 目標をクリアして海外に行った友人の口コミを聞いて。<br>
-								③ 料金がお手頃な上にネイティブの授業なので試験対策をしながら会話力もアップできそう。
+						<div class="col-md-8 col-md-offset-1">
+							<h5>日常英会話の目的の一番人気は旅行英語、旅行の英会話です。旅行英語を、フレーズ本などで学ばれても、相手の返答がわからなければ、
+								せっかくの会話もそこまで。初心者には安心の日本語バイリンガルのネイティブ講師が、丁寧にあなたがどこまで聞けているのかを確認し、
+								あなたの言いたいことが言えるお手伝いをします。
 							</h5>
-							<h5>★実際のレッスン内容は？<br>
-								語学力の世界基準であるCEFRにも対応した英会話サンミハールのレベルチェックまたはPractice Test等による弱点の解析を行い、個人にあったレッスンプランを立てて短期、長期での目標設定をします。実践に即したレッスン内容で、その都度評価の確認ができるので、今自分がどのレベルにいるのか、後何をすれば良いのかが具体的にわかります。<br><br>
-								TOEIC
-								SpeakingやWriting、英検の作文に二次面接試験、そしてTOEFL・IELTSのWritingにSpeakingの対策は試験対策の経験豊かなネイティブに教わるのが効果的。試験全般にわたる弱点の改善、強化すべき点は授業外の日本人カウンセラーによって無料で行われます。また解き方のコツなども日本語での解説が必要な場合は教師に授業中に、または日本人カウンセラーに授業外で日本語で聞くことが出来ます。サンミハールでは自分で出来ることは自分で、出来ないことは授業でやりましょうという、経済的で効果的な試験対策を行っています。<br>
-								◎初心者の方には基礎的な英語力の養成を授業で行いつつ、宿題等によって中学英語レベルまで引き上げ試験の対策に移ります。
+							<h5>ビジネスの場においても、基本フレーズの丸暗記だけでは、円滑なコミュニケーションは難しいです。中級・上級者には、知っている文法を組み合わせ、
+								せるよう、またその状況に最適な単語を使えるように指導し、その上で使える英語のトレーニングをします。
 							</h5>
-							<div class="col-sm-12 text-center" style="margin-top: 30px;">
+							<h5>サンミハールのマンツーマンレッスンでもう一歩踏み込んだ会話が出来る自分になりませんか？</h5>
+							<!-- <div class="col-sm-12 text-center" style="margin-top: 30px;">
 								<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-							</div>
-						</div> -->
+							</div> -->
+						</div>
 					</div>
 
 					<!--                 nav pills -->
