--- a/lesson-course.html
+++ b/lesson-course.html
@@ -105,7 +105,7 @@
 							</li>
 							<li>
 								<a href="index.html#pricing">
-									料金と時間割
+									おすすめプラン
 								</a>
 							</li>
 							<li>
@@ -116,6 +116,11 @@
 							<li>
 								<a href="index.html#testimonials">
 									生徒さんの声
+								</a>
+							</li>
+							<li>
+								<a href="#events">
+									デイリーテーマ
 								</a>
 							</li>
 							<li>
@@ -622,7 +627,7 @@
 							</div>
 
 							<div class="form-group label-floating">
-<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
+							<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
 								<textarea name="message" class="form-control" rows="4" required></textarea>
 							</div>
 
