--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
 							</li>
 							<li>
 								<a href="index.html#pricing">
-									料金と時間割
+									おすすめプラン
 								</a>
 							</li>
 							<li>
@@ -117,6 +117,11 @@
 							<li>
 								<a href="index.html#testimonials">
 									生徒さんの声
+								</a>
+							</li>
+							<li>
+								<a href="#events">
+									デイリーテーマ
 								</a>
 							</li>
 							<li>
