--- a/lesson-course-airline.html
+++ b/lesson-course-airline.html
@@ -105,7 +105,7 @@
 							</li>
 							<li>
 								<a href="index.html#pricing">
-									料金と時間割
+									おすすめプラン
 								</a>
 							</li>
 							<li>
@@ -116,6 +116,11 @@
 							<li>
 								<a href="index.html#testimonials">
 									生徒さんの声
+								</a>
+							</li>
+							<li>
+								<a href="#events">
+									デイリーテーマ
 								</a>
 							</li>
 							<li>
@@ -269,14 +274,11 @@
 							<a href="#icao" class="btn btn-primary btn-round" style="width: 100%">ICAO標準航空英語試験 </a>
 						</div>
 						<div class="col-md-8 col-md-offset-1">
-							<!-- <h5>操縦士（パイロット）、客室乗務員（キャビンクルー、フライトアテンダント）、地上職（グランドスタッフ、グランドホステス）をはじめ、航空業界で働く方々にとって英会話能力は必須と言っても過言ではありません。それぞれの業務内容に合わせて必要とされる会話能力をマンツーマンのレッスンで磨きます。
+							<h5>操縦士（パイロット、コックピットクルー）、客室乗務員（キャビンクルー、フライトアテンダント、CA、キャビンアテンダント）、
+								地上職（グランドスタッフ、グランドホステス）、航空機関士（フライトエンジニア）、航空管制官（ATC）をはじめ、
+								航空業界で働く方々にとって英会話能力は必須と言っても過言ではありません。
+								それぞれの業務内容に合わせて必要とされる会話能力をマンツーマンのレッスンで磨きます。
 							</h5>
-							<h5>★実際のレッスン内容は？<br>
-								語学力の世界基準であるCEFRにも対応した英会話サンミハールのレベルチェックまたはPractice Test等による弱点の解析を行い、個人にあったレッスンプランを立てて短期、長期での目標設定をします。実践に即したレッスン内容で、その都度評価の確認ができるので、今自分がどのレベルにいるのか、後何をすれば良いのかが具体的にわかります。<br><br>
-								TOEIC
-								SpeakingやWriting、英検の作文に二次面接試験、そしてTOEFL・IELTSのWritingにSpeakingの対策は試験対策の経験豊かなネイティブに教わるのが効果的。試験全般にわたる弱点の改善、強化すべき点は授業外の日本人カウンセラーによって無料で行われます。また解き方のコツなども日本語での解説が必要な場合は教師に授業中に、または日本人カウンセラーに授業外で日本語で聞くことが出来ます。サンミハールでは自分で出来ることは自分で、出来ないことは授業でやりましょうという、経済的で効果的な試験対策を行っています。<br>
-								◎初心者の方には基礎的な英語力の養成を授業で行いつつ、宿題等によって中学英語レベルまで引き上げ試験の対策に移ります。
-							</h5> -->
 							<!-- <div class="col-sm-12 text-center" style="margin-top: 30px;">
 								<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
 							</div> -->
