--- a/lesson-course-corporate.html
+++ b/lesson-course-corporate.html
@@ -105,7 +105,7 @@
 							</li>
 							<li>
 								<a href="index.html#pricing">
-									料金と時間割
+									おすすめプラン
 								</a>
 							</li>
 							<li>
@@ -116,6 +116,11 @@
 							<li>
 								<a href="index.html#testimonials">
 									生徒さんの声
+								</a>
+							</li>
+							<li>
+								<a href="#events">
+									デイリーテーマ
 								</a>
 							</li>
 							<li>
