--- a/pricing.html
+++ b/pricing.html
@@ -105,7 +105,7 @@
 							</li>
 							<li>
 								<a href="index.html#pricing">
-									料金と時間割
+									おすすめプラン
 								</a>
 							</li>
 							<li>
