ICAO Pilot, ATC sections edited and images replaced.

--- a/about.html
+++ b/about.html
@@ -427,7 +427,7 @@
 								<h4 class="info-title">Q.　自分で文章を作るのが大変です。辞書では、しっくり来る訳がないことも多いし。</h4>
 								<p>
 									A.　単語をそのまま訳すととんでもない文章になることがありますね。例えば友達と電話で話していて「いまからそっちに行くわ。」は、"I'm going there from now." ではなく、"I'm
-									coming there from now."です。「go＝行く」と覚えたのに答は反対の"come"です。"come"を辞書でひくと「〈人・動物・車などが〉〈話し手のほうへ〉（やって）来る；〈聞き手のほうへ〉行く」と書かれているのですが、「行く」という日本語を和英辞典で調べても"go",
+									coming."です。「go＝行く」と覚えたのに答は反対の"come"です。"come"を辞書でひくと「〈人・動物・車などが〉〈話し手のほうへ〉（やって）来る；〈聞き手のほうへ〉行く」と書かれているのですが、「行く」という日本語を和英辞典で調べても"go",
 									"leave"などの単語はすぐに出てくるのですが、"come"はずっと下のほうに書かれています。独学で完全な文章を作るとなると、辞書を端から端まで読んで、尚且つ文法書と確かめながら作っていく作業が少なからず必要ですし、それでもなかなかネイティブのような発想の完全な文章を作るのは難しいです。サンミハールでは日本語から英語ではなくて英単語の持つ本来のニュアンスを覚えて使っていただけるよう、たくさんの例文を使って単語を理解することをお勧めしています。辞書を書かれた先生方は限られたスペースに一語を選ぶという究極の選択をして書かれています。文法書もしかり。辞書で書ききれていないニュアンスは、語学のプロ、サンミハールの教師に聞くのが早くて賢い方法です。
 									ちなみに"come"は話し手と聞き手が近づき、"go"は離れるというニュアンスで覚えるとまちがえにくくなりますよ。
 								</p>
