--- a/lesson-course-airline.html
+++ b/lesson-course-airline.html
@@ -374,15 +374,18 @@
 								<div class="row">
 									<div class="col-md-4">
 										<div class="card-image">
-											<img class="img img-raised" src="assets/img/examples/airline.jpg" />
+											<img class="img img-raised" src="assets/img/examples/pilot-01.jpg" />
 										</div>
 									</div>
 									<div class="col-md-8">
 										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="#">航空英語（エアラインの英語） </a>
+											<a href="#">操縦士（パイロット）の英語</a>
 										</h3>
 										<p>
-											操縦士（パイロット）、客室乗務員（キャビンクルー、フライトアテンダント）、地上職（グランドスタッフ、グランドホステス）をはじめ、航空業界で働く方々にとって英会話能力は必須と言っても過言ではありません。それぞれの業務内容に合わせて必要とされる会話能力をマンツーマンのレッスンで磨きます。
+											「ICAO標準航空英語試験の内容や、実際の現場で必要な状況設定別での英語会話表現をマンツーマンのレッスンで学びます。
+											コックピットの中で交わされる外国人パイロットや、ネイティブの管制塔員との会話などをよりスムーズに行うための広範囲に渡る会話力の習得を目指します。
+											また、緊急時等、即座に的確な判断が要求される状況下での対応が英語で出来るようになるトレーニングを行います。
+										</p>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
 											</div>
@@ -397,15 +400,19 @@
 								<div class="row">
 									<div class="col-md-4">
 										<div class="card-image">
-											<img class="img img-raised" src="assets/img/examples/pilot-01.jpg" />
+											<img class="img img-raised" src="assets/img/examples/atc.jpg" />
 										</div>
 									</div>
 									<div class="col-md-8">
 										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="#">操縦士（パイロット）の英語</a>
+											<a href="#">航空管制官（ＡＴＣ）の英語</a>
 										</h3>
 										<p>
-											「ICAO標準航空英語試験の内容や、実際の現場で必要な状況設定別での英語会話表現をマンツーマンのレッスンで学びます。コックピットの中で交わされる外国人パイロットや、ネイティブの管制塔員との会話などをよりスムーズに行うための広範囲に渡る会話力の習得を目指します。また、緊急時等、即座に的確な判断が要求される状況下での対応が英語で出来るようになるトレーニングを行います。
+											航空管制官とパイロットの通信には英語を使うのが世界的なルールです。技能試験に合格してもすぐに英語がペラペラ話せるわけではありません。
+											年々増加する国際線の航空機を安全に日本の空港に誘導し指示が出せる英語の能力も問われます。
+											コールサインやフォネティックコードを使用して実際の航空無線さながらの英会話をネイティブ講師と学べます。
+											また、ICAO標準航空英語試験の対策も万全です。
+											Skype（スカイプ）を使用すればオンラインでどこからでもスクールと同じレッスンが受けられます。
 										</p>
 										<div class="col-sm-12 text-center" style="margin-top: 30px;">
 											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
@@ -439,7 +446,7 @@
 											<li>航空会社の英語面接対策-<br> 自己紹介から志望動機、自分の能力、適応性などを理由をつけてきちんと英語で伝えることが出来るようになる会話のトレーニングを実際の面接形式で行います。
 											</li>
 										</ol>
-										<h4>現在航空会社に勤務中の方の実践英会話</h4>
+										<h4>★現在航空会社に勤務中の方の実践英会話</h4>
 										<p>様々な状況、乗客の要望に丁寧にかつ適切に応えられる様、より広範囲での会話をマンツーマンおよびフリーカンバセーションで学びます。これまでサンミハールで学んで来られた数多くの現役客室乗務員の方々からのご意見を参考として、すぐに現場で役立つ英語を使えるようになります。
 										</p>
 										<div class="col-sm-12 text-center" style="margin-top: 30px;">
@@ -461,7 +468,7 @@
 									</div>
 									<div class="col-md-8">
 										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="#">ICAO標準航空英語試験 </a>
+											<a href="#">ICAO標準航空英語試験対策</a>
 										</h3>
 										<p>
 											ICAO-International Civil Aviation Organization（国際民間航空機関）の略。国連の専門機関の1つ。2008年3月以降、操縦士や管制官等は航空英語能力を証明することが要件となり、語学能力レベルは6段階のうち、実用レベル（レベル4）以上であることが必要です。実用レベル（level-4）の証明の有効期間は3年。また国土交通省の東京航空局、大阪航空局の両局内の情報官の一部の方々にもICAO標準航空英語のlevel-4(Operational
