--- a/lesson-course-medical.html
+++ b/lesson-course-medical.html
@@ -409,7 +409,7 @@
 									</div>
 									<div class="col-md-8">
 										<h3 class="card-title u-margin-top-small-tablet">
-											<!-- <a href="#">看護師の英会話</a> -->
+											<a href="#">看護士・医療従事者の英会話</a>
 										</h3>
 										<ul>
 											<li>
