--- a/lesson-course-travel.html
+++ b/lesson-course-travel.html
@@ -272,13 +272,11 @@
 							<a href="#kida" class="btn btn-primary btn-round" style="width: 100%">子供英会話</a>
 						</div>
 						<div class="col-md-8 col-md-offset-1">
-							<!-- <h5>TOEIC（トーイック）、英検、TOEFL（トフル）、IELTS（アイエルツ）他各種試験対策を経験豊かなネイティブ講師の指導と日本人スタッフによる無料のカウンセリングで目標達成！<br><br> ★ 試験対策をサンミハールに決めた理由<br> ① 無料体験レッスンで、実際のテスト形式の授業を受けて自分にもできると思えた。<br> ② 目標をクリアして海外に行った友人の口コミを聞いて。<br> ③
-								料金がお手頃な上にネイティブの授業なので試験対策をしながら会話力もアップできそう。
+							<h5>神戸三宮英会話サンミハールの小学生、中学生、高校生、大学生の為のレッスンはマンツーマンや兄弟姉妹でのレッスンが最適です。
+								家庭教師のような個人レッスンで、子供達と楽しくかつ効率的に目標達成を目指します。
+								暗記一辺倒の日本の試験対策では太刀打ちできない海外の英語資格試験にも対応できる英語コミュニケーション能力を身に付け、
+								国際人になるお手伝いをいたします。
 							</h5>
-							<h5>★実際のレッスン内容は？<br> 語学力の世界基準であるCEFRにも対応した英会話サンミハールのレベルチェックまたはPractice Test等による弱点の解析を行い、個人にあったレッスンプランを立てて短期、長期での目標設定をします。実践に即したレッスン内容で、その都度評価の確認ができるので、今自分がどのレベルにいるのか、後何をすれば良いのかが具体的にわかります。<br><br> TOEIC
-								SpeakingやWriting、英検の作文に二次面接試験、そしてTOEFL・IELTSのWritingにSpeakingの対策は試験対策の経験豊かなネイティブに教わるのが効果的。試験全般にわたる弱点の改善、強化すべき点は授業外の日本人カウンセラーによって無料で行われます。また解き方のコツなども日本語での解説が必要な場合は教師に授業中に、または日本人カウンセラーに授業外で日本語で聞くことが出来ます。サンミハールでは自分で出来ることは自分で、出来ないことは授業でやりましょうという、経済的で効果的な試験対策を行っています。
-								<br> ◎初心者の方には基礎的な英語力の養成を授業で行いつつ、宿題等によって中学英語レベルまで引き上げ試験の対策に移ります。
-							</h5> -->
 							<!-- <div class="col-sm-12 text-center" style="margin-top: 30px;">
 								<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
 							</div> -->
