Campaign updated for December.

--- a/index.html
+++ b/index.html
@@ -354,7 +354,8 @@
             <div class="col-md-8 col-md-offset-2 text-center">
               <h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
               <h2 class="title">キャンペーン！</h2>
-              <h5 class="text-dark-gray">このページをご訪問下さった方に入会金割引などの特典があります。また、入会後も季節ごとに様々なキャンペーンを実施中！お得に英会話のレッスンを続けられます。キャンペーンは神戸三宮の教室内でのレッスン、WEBレッスン共に適用されます。</h5>
+              <h5 class="text-dark-gray">このページをご訪問下さった方に入会金割引などの特典があります。また、入会後も季節ごとに様々なキャンペーンを実施中！
+                お得に英会話のレッスンを続けられます。キャンペーンは神戸三宮の教室内でのレッスン、WEBレッスン共に適用されます。</h5>
               <div class="section-space"></div>
             </div>
           </div>
@@ -373,9 +374,9 @@
                   <i class="material-icons">stars</i>
                 </div>
                 <div class="description">
-                  <h4 class="info-title text-left">11月新入会者限定！入会金割引キャンペーン</h4>
+                  <h4 class="info-title text-left">１２月新入会者限定！入会金割引キャンペーン</h4>
                   <p class="text-dark-gray  text-left">
-                    11月に新たに入会される方のみの特典です。ホームページ見ました！で入会金が通常10,800円(税込)のところ50％OFF！ （但し、初回ご来校当日入会または体験レッスン後即日入会の場合に適用。）
+                    １２月に新たに入会される方のみの特典です。ホームページ見ました！で入会金が通常10,800円(税込)のところ50％OFF！ （但し、初回ご来校当日入会または体験レッスン後即日入会の場合に適用。）
                   </p>
                 </div>
               </div>
