Adjusted margins on buttons and images

--- a/lesson-course-everyday.html
+++ b/lesson-course-everyday.html
@@ -269,12 +269,10 @@
 							<a href="#prep" class="btn btn-primary btn-round" style="width: 100%">海外赴任準備</a>
 						</div>
 						<div class="col-md-8 col-md-offset-1">
-							<h5>日常英会話の目的の一番人気は旅行英語、旅行の英会話です。旅行英語を、フレーズ本などで学ばれても、相手の返答がわからなければ、
-								せっかくの会話もそこまで。初心者には安心の日本語バイリンガルのネイティブ講師が、丁寧にあなたがどこまで聞けているのかを確認し、
+							<h5>日常英会話の目的の一番人気は旅行英語、旅行の英会話です。旅行英語を、フレーズ本などで学ばれても、相手の返答がわからなければ、 せっかくの会話もそこまで。初心者には安心の日本語バイリンガルのネイティブ講師が、丁寧にあなたがどこまで聞けているのかを確認し、
 								あなたの言いたいことが言えるお手伝いをします。
 							</h5>
-							<h5>ビジネスの場においても、基本フレーズの丸暗記だけでは、円滑なコミュニケーションは難しいです。中級・上級者には、知っている文法を組み合わせ、
-								せるよう、またその状況に最適な単語を使えるように指導し、その上で使える英語のトレーニングをします。
+							<h5>ビジネスの場においても、基本フレーズの丸暗記だけでは、円滑なコミュニケーションは難しいです。中級・上級者には、知っている文法を組み合わせ、 せるよう、またその状況に最適な単語を使えるように指導し、その上で使える英語のトレーニングをします。
 							</h5>
 							<h5>サンミハールのマンツーマンレッスンでもう一歩踏み込んだ会話が出来る自分になりませんか？</h5>
 							<!-- <div class="col-sm-12 text-center" style="margin-top: 30px;">
@@ -418,7 +416,7 @@
 							</div>
 							<div class="card card-plain card-blog">
 								<div class="row">
-									<div class="col-md-4 u-float-right">
+									<div class="col-md-4 u-float-right u-margin-bottom-small">
 										<div class="card-image">
 											<img class="img img-raised" src="assets/img/examples/business-3.jpg" />
 										</div>
@@ -435,7 +433,7 @@
 							</div>
 							<div class="card card-plain card-blog">
 								<div class="row">
-									<div class="col-md-4">
+									<div class="col-md-4 u-margin-bottom-small">
 										<div class="card-image">
 											<img class="img img-raised" src="assets/img/examples/business-1.jpg" />
 										</div>
