--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           </div>
         </div>
         <div class="row text-center">
-          <a href="lesson-course.html" class="btn btn-primary btn-lg">
+          <a href="lesson-course.html" class="btn btn-primary btn-lg u-margin-bottom-small-mobile">
             レッスンを詳しく見てみる
           </a>
           <a href="tel:078-331-3035" class="call-now-btn-box">
@@ -354,8 +354,8 @@
             <div class="col-md-8 col-md-offset-2 text-center">
               <h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
               <h2 class="title">キャンペーン！</h2>
-              <h5 class="text-dark-gray">このページをご訪問下さった方に入会金割引などの特典があります。また、入会後も季節ごとに様々なキャンペーンを実施中！
-                お得に英会話のレッスンを続けられます。キャンペーンは神戸三宮の教室内でのレッスン、WEBレッスン共に適用されます。</h5>
+              <h5 class="text-dark-gray">このページをご訪問下さった方に入会金割引などの特典があります。また、入会後も季節ごとに様々なキャンペーンを実施中！ お得に英会話のレッスンを続けられます。キャンペーンは神戸三宮の教室内でのレッスン、WEBレッスン共に適用されます。
+              </h5>
               <div class="section-space"></div>
             </div>
           </div>
@@ -801,7 +801,8 @@
                 <div class="description">
                   <h4 class="info-title">デイリーテーマ</h4>
                   <p>皆様から募集したフリーカンバセーションのテーマをそのまま掲載しています。（文章の正誤は授業の時、先生に聞いてね。）応募はメールでも受付しています。<br>
-                  <a href="mailto:study@sunmihall.com">今、メールでテーマを送る。</a></p>
+                    <a href="mailto:study@sunmihall.com">今、メールでテーマを送る。</a>
+                  </p>
                 </div>
               </div>
 
@@ -946,7 +947,7 @@
         <a href="https://www.youtube.com/watch?v=MreeiBt7yMM&list=UUUDPTYAJh42HoaeHtKXQv1w&index=2" target="_blank"
           class="btn btn-danger btn-raised" style="width: 200px">
           <i class="fa fa-play">　</i>Matt先生　</a>
-          <a href="about.html" class="btn btn-primary btn-raised" style="width: 200px">校長ご挨拶</a>
+        <a href="about.html" class="btn btn-primary btn-raised" style="width: 200px">校長ご挨拶</a>
 
       </div>
     </div>
@@ -1032,6 +1033,9 @@
                 <h4 class="card-title">メールでのお問い合わせはこちら</h4>
               </div>
               <div class="card-content">
+                <div class="row">
+                  <p class="text-center">返信メールが届かない場合はお電話下さい</p>
+                </div>
                 <div class="row">
                   <div class="col-sm-6 tight-col">
                     <div class="info info-horizontal">
