Edited Contact form on all pages.

--- a/lesson-course-corporate.html
+++ b/lesson-course-corporate.html
@@ -678,14 +678,14 @@
 								</div>
 								<div class="col-md-6">
 									<div class="form-group label-floating">
-										<label class="control-label">折り返しのお電話ご希望の時間帯</label>
+										<label class="control-label">折り返しのお電話ご希望の時間帯（任意）</label>
 										<input name="time" type="text" class="form-control">
 									</div>
 								</div>
 							</div>
 
 							<div class="form-group label-floating">
-<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
+								<label class="control-label">お問い合わせ内容</label>
 								<textarea name="message" class="form-control" rows="4" required></textarea>
 							</div>
 
