index page menu items fixed.

--- a/index.html
+++ b/index.html
@@ -214,17 +214,17 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="lesson-course-travel.html">
                   留学準備
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="lesson-course-travel.html">
                   帰国子女
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="lesson-course-travel.html">
                   子供英会話
                 </a>
               </li>
