Change TOEIC TOEFL IELTS Eiken order, NY Campaign, Map + Access link

--- a/lesson-course-airline.html
+++ b/lesson-course-airline.html
@@ -129,6 +129,11 @@
 								</a>
 							</li>
 							<li>
+								<a href="index.html#access">
+									地図・アクセス
+								</a>
+							</li>
+							<li>
 								<a href="index.html#contactus">
 									お問い合わせ
 								</a>
@@ -166,12 +171,12 @@
 							</li>
 							<li>
 								<a href="lesson-course-toeic.html">
-									TOEIC・英検
+									IELTS・TOEFL
 								</a>
 							</li>
 							<li>
 								<a href="lesson-course-toeic.html">
-									TOEFL・IELTS
+									TOEIC・英検
 								</a>
 							</li>
 							<li>
@@ -274,10 +279,8 @@
 							<a href="#icao" class="btn btn-primary btn-round" style="width: 100%">ICAO標準航空英語試験 </a>
 						</div>
 						<div class="col-md-8 col-md-offset-1">
-							<h5>操縦士（パイロット、コックピットクルー）、客室乗務員（キャビンクルー、フライトアテンダント、CA、キャビンアテンダント）、
-								地上職（グランドスタッフ、グランドホステス）、航空機関士（フライトエンジニア）、航空管制官（ATC）をはじめ、
-								航空業界で働く方々にとって英会話能力は必須と言っても過言ではありません。
-								それぞれの業務内容に合わせて必要とされる会話能力をマンツーマンのレッスンで磨きます。
+							<h5>操縦士（パイロット、コックピットクルー）、客室乗務員（キャビンクルー、フライトアテンダント、CA、キャビンアテンダント）、 地上職（グランドスタッフ、グランドホステス）、航空機関士（フライトエンジニア）、航空管制官（ATC）をはじめ、
+								航空業界で働く方々にとって英会話能力は必須と言っても過言ではありません。 それぞれの業務内容に合わせて必要とされる会話能力をマンツーマンのレッスンで磨きます。
 							</h5>
 							<!-- <div class="col-sm-12 text-center" style="margin-top: 30px;">
 								<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
@@ -382,13 +385,12 @@
 											<a href="#">操縦士（パイロット）の英語</a>
 										</h3>
 										<p>
-											「ICAO標準航空英語試験の内容や、実際の現場で必要な状況設定別での英語会話表現をマンツーマンのレッスンで学びます。
-											コックピットの中で交わされる外国人パイロットや、ネイティブの管制塔員との会話などをよりスムーズに行うための広範囲に渡る会話力の習得を目指します。
+											「ICAO標準航空英語試験の内容や、実際の現場で必要な状況設定別での英語会話表現をマンツーマンのレッスンで学びます。 コックピットの中で交わされる外国人パイロットや、ネイティブの管制塔員との会話などをよりスムーズに行うための広範囲に渡る会話力の習得を目指します。
 											また、緊急時等、即座に的確な判断が要求される状況下での対応が英語で出来るようになるトレーニングを行います。
 										</p>
-											<div class="col-sm-12 text-center" style="margin-top: 30px;">
-												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-											</div>
+										<div class="col-sm-12 text-center" style="margin-top: 30px;">
+											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -408,11 +410,8 @@
 											<a href="#">航空管制官（ＡＴＣ）の英語</a>
 										</h3>
 										<p>
-											航空管制官とパイロットの通信には英語を使うのが世界的なルールです。技能試験に合格してもすぐに英語がペラペラ話せるわけではありません。
-											年々増加する国際線の航空機を安全に日本の空港に誘導し指示が出せる英語の能力も問われます。
-											コールサインやフォネティックコードを使用して実際の航空無線さながらの英会話をネイティブ講師と学べます。
-											また、ICAO標準航空英語試験の対策も万全です。
-											Skype（スカイプ）を使用すればオンラインでどこからでもスクールと同じレッスンが受けられます。
+											航空管制官とパイロットの通信には英語を使うのが世界的なルールです。技能試験に合格してもすぐに英語がペラペラ話せるわけではありません。 年々増加する国際線の航空機を安全に日本の空港に誘導し指示が出せる英語の能力も問われます。
+											コールサインやフォネティックコードを使用して実際の航空無線さながらの英会話をネイティブ講師と学べます。 また、ICAO標準航空英語試験の対策も万全です。 Skype（スカイプ）を使用すればオンラインでどこからでもスクールと同じレッスンが受けられます。
 										</p>
 										<div class="col-sm-12 text-center" style="margin-top: 30px;">
 											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
