--- a/lesson-course-travel.html
+++ b/lesson-course-travel.html
@@ -129,6 +129,11 @@
 								</a>
 							</li>
 							<li>
+								<a href="index.html#access">
+									地図・アクセス
+								</a>
+							</li>
+							<li>
 								<a href="index.html#contactus">
 									お問い合わせ
 								</a>
@@ -166,12 +171,12 @@
 							</li>
 							<li>
 								<a href="lesson-course-toeic.html">
-									TOEIC・英検
+									IELTS・TOEFL
 								</a>
 							</li>
 							<li>
 								<a href="lesson-course-toeic.html">
-									TOEFL・IELTS
+									TOEIC・英検
 								</a>
 							</li>
 							<li>
@@ -269,13 +274,11 @@
 						<div class="col-md-3">
 							<a href="#abroad" class="btn btn-primary btn-round" style="width: 100%">留学準備</a>
 							<a href="#returnee" class="btn btn-primary btn-round" style="width: 100%">帰国子女の英語</a>
-							<a href="#kida" class="btn btn-primary btn-round" style="width: 100%">子供英会話</a>
+							<a href="#kids" class="btn btn-primary btn-round" style="width: 100%">子供英会話</a>
 						</div>
 						<div class="col-md-8 col-md-offset-1">
-							<h5>神戸三宮英会話サンミハールの小学生、中学生、高校生、大学生の為のレッスンはマンツーマンや兄弟姉妹でのレッスンが最適です。
-								家庭教師のような個人レッスンで、子供達と楽しくかつ効率的に目標達成を目指します。
-								暗記一辺倒の日本の試験対策では太刀打ちできない海外の英語資格試験にも対応できる英語コミュニケーション能力を身に付け、
-								国際人になるお手伝いをいたします。
+							<h5>神戸三宮英会話サンミハールの小学生、中学生、高校生、大学生の為のレッスンはマンツーマンや兄弟姉妹でのレッスンが最適です。 家庭教師のような個人レッスンで、子供達と楽しくかつ効率的に目標達成を目指します。
+								暗記一辺倒の日本の試験対策では太刀打ちできない海外の英語資格試験にも対応できる英語コミュニケーション能力を身に付け、 国際人になるお手伝いをいたします。
 							</h5>
 							<!-- <div class="col-sm-12 text-center" style="margin-top: 30px;">
 								<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
