--- a/about.html
+++ b/about.html
@@ -130,6 +130,11 @@
 								</a>
 							</li>
 							<li>
+								<a href="index.html#access">
+									地図・アクセス
+								</a>
+							</li>
+							<li>
 								<a href="index.html#contactus">
 									お問い合わせ
 								</a>
@@ -167,12 +172,12 @@
 							</li>
 							<li>
 								<a href="lesson-course-toeic.html">
-									TOEIC・英検
+									IELTS・TOEFL
 								</a>
 							</li>
 							<li>
 								<a href="lesson-course-toeic.html">
-									TOEFL・IELTS
+									TOEIC・英検
 								</a>
 							</li>
 							<li>
