--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
                 </a>
               </li>
               <li>
+                <a href="#access">
+                  地図・アクセス
+                </a>
+              </li>
+              <li>
                 <a href="#contactus">
                   お問い合わせ
                 </a>
@@ -185,12 +190,12 @@
               </li>
               <li>
                 <a href="lesson-course-toeic.html">
-                  TOEIC・英検
+                  IELTS・TOEFL
                 </a>
               </li>
               <li>
                 <a href="lesson-course-toeic.html">
-                  TOEFL・IELTS
+                  TOEIC・英検
                 </a>
               </li>
               <li>
@@ -283,6 +288,23 @@
 
   <div class="main main-raised" style="clear: both;">
 
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-md-8 col-md-offset-2 u-margin-top-large">
+          <h3 class="title">*****NOTICE*****</h3>
+          <h4>
+            【冬休みのお知らせ】スクールの冬休みは12/23（日）から1/6（日）までです。この期間はお電話078-331-3035または下のお問い合わせフォームからのみ受付けしておりますのでご了承ください。
+          </h4>
+          <h4>
+            【1月お年玉キャンペーン！】新春お年玉キャンペーンは
+            <a href="#campaign">こちら</a>。
+          </h4>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
     <!--     *********    FEATURES     *********      -->
 
     <div class="container">
@@ -364,7 +386,7 @@
 
             <div class="col-md-5 col-md-offset-1">
               <div class="card card-no-shadow-background">
-                <img src="assets/img/examples/2018-xmas.jpg" alt="Christmas Campaign">
+                <img src="assets/img/happynewyear.png" alt="New Year Campaign">
               </div>
             </div>
 
@@ -374,14 +396,14 @@
                   <i class="material-icons">stars</i>
                 </div>
                 <div class="description">
-                  <h4 class="info-title text-left">１２月新入会者限定！入会金割引キャンペーン</h4>
+                  <h4 class="info-title text-left">1月新入会者限定！お年玉キャンペーン！</h4>
                   <p class="text-dark-gray  text-left">
-                    １２月に新たに入会される方のみの特典です。ホームページ見ました！で入会金が通常10,800円(税込)のところ50％OFF！ （但し、初回ご来校当日入会または体験レッスン後即日入会の場合に適用。）
+                    1月に新たに入会される方のみの特典です。ホームページ見ました！で入会金が通常10,800円(税込)のところ5,000円OFF！ （但し、初回ご来校当日入会または体験レッスン後即日入会の場合に適用。）
                   </p>
                 </div>
               </div>
 
-              <div class="info info-horizontal">
+              <!-- <div class="info info-horizontal">
                 <div class="icon icon-primary">
                   <i class="material-icons">stars</i>
                 </div>
@@ -394,7 +416,7 @@
                     <br><br> 他、詳しくはスクールにお問合せください。
                   </p>
                 </div>
-              </div>
+              </div> -->
             </div>
 
           </div>
@@ -960,7 +982,7 @@
 
     <!--     *********    MAP ACCESS     *********      -->
 
-    <div class="section">
+    <div class="section" id="access">
       <div class="container">
         <div class="row">
           <h4 class="text-center">神戸・三宮の英会話サンミハールランゲージサービスの</h4>
