--- a/lesson-course-medical.html
+++ b/lesson-course-medical.html
@@ -129,6 +129,11 @@
 								</a>
 							</li>
 							<li>
+								<a href="index.html#access">
+									地図・アクセス
+								</a>
+							</li>
+							<li>
 								<a href="index.html#contactus">
 									お問い合わせ
 								</a>
@@ -166,12 +171,12 @@
 							</li>
 							<li>
 								<a href="lesson-course-toeic.html">
-									TOEIC・英検
+									IELTS・TOEFL
 								</a>
 							</li>
 							<li>
 								<a href="lesson-course-toeic.html">
-									TOEFL・IELTS
+									TOEIC・英検
 								</a>
 							</li>
 							<li>
