--- a/lesson-course-toeic.html
+++ b/lesson-course-toeic.html
@@ -129,6 +129,11 @@
 								</a>
 							</li>
 							<li>
+								<a href="index.html#access">
+									地図・アクセス
+								</a>
+							</li>
+							<li>
 								<a href="index.html#contactus">
 									お問い合わせ
 								</a>
@@ -166,12 +171,12 @@
 							</li>
 							<li>
 								<a href="lesson-course-toeic.html">
-									TOEIC・英検
+									IELTS・TOEFL
 								</a>
 							</li>
 							<li>
 								<a href="lesson-course-toeic.html">
-									TOEFL・IELTS
+									TOEIC・英検
 								</a>
 							</li>
 							<li>
@@ -257,19 +262,20 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center">
 							<h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
-							<h2 class="title">TOEIC・英検・TOEFL・IELTS</h2>
+							<h2 class="title">IELTS・TOEFL・TOEIC・英検
+							</h2>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-md-3">
+							<a href="#ielts" class="btn btn-primary btn-round" style="width: 100%">IELTS</a>
+							<a href="#toefl" class="btn btn-primary btn-round" style="width: 100%">TOEFL</a>
 							<a href="#toeic" class="btn btn-primary btn-round" style="width: 100%">TOEIC</a>
 							<a href="#eiken" class="btn btn-primary btn-round" style="width: 100%">英検</a>
-							<a href="#toefl" class="btn btn-primary btn-round" style="width: 100%">TOEFL</a>
-							<a href="#ielts" class="btn btn-primary btn-round" style="width: 100%">IELTS</a>
 						</div>
 						<div class="col-md-8 col-md-offset-1">
-							<h5>TOEIC（トーイック）、英検、TOEFL（トフル）、IELTS（アイエルツ）他各種試験対策を経験豊かなネイティブ講師の指導と日本人スタッフによる無料のカウンセリングで目標達成！<br><br>								★ 試験対策をサンミハールに決めた理由<br> ① 無料体験レッスンで、実際のテスト形式の授業を受けて自分にもできると思えた。<br> ② 目標をクリアして海外に行った友人の口コミを聞いて。<br>								③ 料金がお手頃な上にネイティブの授業なので試験対策をしながら会話力もアップできそう。
+							<h5>IELTS（アイエルツ）、TOEFL（トフル）、TOEIC（トーイック）、英検他各種試験対策を経験豊かなネイティブ講師の指導と日本人スタッフによる無料のカウンセリングで目標達成！<br><br>								★ 試験対策をサンミハールに決めた理由<br> ① 無料体験レッスンで、実際のテスト形式の授業を受けて自分にもできると思えた。<br> ② 目標をクリアして海外に行った友人の口コミを聞いて。<br>								③ 料金がお手頃な上にネイティブの授業なので試験対策をしながら会話力もアップできそう。
 							</h5>
 							<h5>★実際のレッスン内容は？<br> 語学力の世界基準であるCEFRにも対応した英会話サンミハールのレベルチェックまたはPractice Test等による弱点の解析を行い、個人にあったレッスンプランを立てて短期、長期での目標設定をします。実践に即したレッスン内容で、その都度評価の確認ができるので、今自分がどのレベルにいるのか、後何をすれば良いのかが具体的にわかります。<br><br>								TOEIC SpeakingやWriting、英検の作文に二次面接試験、そしてTOEFL・IELTSのWritingにSpeakingの対策は試験対策の経験豊かなネイティブに教わるのが効果的。試験全般にわたる弱点の改善、強化すべき点は授業外の日本人カウンセラーによって無料で行われます。また解き方のコツなども日本語での解説が必要な場合は教師に授業中に、または日本人カウンセラーに授業外で日本語で聞くことが出来ます。サンミハールでは自分で出来ることは自分で、出来ないことは授業でやりましょうという、経済的で効果的な試験対策を行っています。
 								<br> ◎初心者の方には基礎的な英語力の養成を授業で行いつつ、宿題等によって中学英語レベルまで引き上げ試験の対策に移ります。
@@ -365,55 +371,44 @@
 							<h2 class="title">試験対策コース</h2>
 
 							<br />
-							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="toeic"></div>
+
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="ielts"></div>
 							<div class="card card-plain card-blog">
 								<div class="row">
 									<div class="col-md-4">
-										<a href="https://www.iibc-global.org/toeic.html" target="_blank">
+										<a href="http://www.eiken.or.jp/ielts/" target="_blank">
 											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/card-blog4.jpg" />
+												<img class="img img-raised" src="assets/img/examples/ielts.jpg" />
 											</div>
 										</a>
 									</div>
 									<div class="col-md-8">
 										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="https://www.iibc-global.org/toeic.html" target="_blank">TOEIC</a>
+											<a href="http://www.eiken.or.jp/ielts/" target="_blank">IELTS</a>
 										</h3>
 										<p>
-											神戸・三宮の英会話サンミハールランゲージサービスのTOEIC（トーイック）コースは短期集中でのスコアアップが有効です。その方のレベルにより、より早く目標の点数に達するまで指導します。<br>
-											<strong>初心者(中学英語の理解に自信のない方)には基礎から丁寧に授業で学べます。その後以下の対策に進みます。</strong></p>
-										<ol>
-											<li>模試を受ける。</li>
-											<li>各パートに対しての理解度を「パーセンテージで評価」した分析表を元に弱点を確認する。</li>
-											<li>各問題に対する、また個人にあった勉強方法を無料カウンセリングで細く聞いて計画を立てる。</li>
-										</ol>
-										<p>など、以上は対策の一部です。詳しくはスクールにお問い合わせください。</p>
-										<div class="col-sm-12 text-center" style="margin-top: 30px;">
-											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<hr class="hr-dark-blue">
-
-							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="eiken"></div>
-							<div class="card card-plain card-blog">
-								<div class="row">
-									<div class="col-md-4">
-										<a href="http://www.eiken.or.jp/eiken/" target="_blank">
-											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/eiken.jpg" />
-											</div>
-										</a>
-									</div>
-									<div class="col-md-8">
-										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="http://www.eiken.or.jp/eiken/" target="_blank">英検</a>
-										</h3>
-										<p>
-											「過去問を制する者は英検を制する！」英検の一次試験対策はお金をかけず、自宅でひたすら過去問を解くこと。とは言っても、一人でできない、わからないところは、レッスンで日本語で聞いて話して弱点補強し、合格ラインへと押し上げます。一次試験の作文対策は宿題で書いて来られた作文をネイティブ講師に添削してもらうのが、ベスト！一次、二次試験を問わず、サンミハールの単語テストで語彙力アップ！英検１級、準１級、２級、準２級、３級の二次試験の面接対策は神戸・三宮の英会話サンミハールランゲージサービスのネイティブの講師に行ってもらうのが、経済的で効果的。高校１年生で準１級合格の実績！
+											神戸・三宮の英会話サンミハールランゲージサービスは神戸三宮で一番にIELTS（アイエルツ）対策コースを開始したスクールです。IELTS（アイエルツ）のスピーキングと同時にIELTS（アイエルツ）のリーディングやIELTS（アイエルツ）のリスニングでのメモの取り方も授業で学べます。また、IELTSのライティングのポイントは授業で実際の作文の作業は自宅または空き教室で行うので大変経済的です。TOEFL（トフル）対策と同様、各セクションの対策を全般的に行う、または、個々の能力によって必要なセクション用の対策を別々に行うことが出来ます。
+											IELTS （アイエルツ）5.0、5.5、6.0、6.5、7.0、7.5、8.0、8.5、9.0　目標の方の対策です。
 										</p>
+										<ol>
+											<li>IELTS （アイエルツ）　ボキャビル対策（語彙を増やす</li>
+											<li>IELTS（アイエルツ） リスニング対策</li>
+											<li>IELTS （アイエルツ）リーディング対策</li>
+											<li>IELTS （アイエルツ）ライティング（作文）対策</li>
+											<li>IELTS （アイエルツ）スピーキング対策</li>
+										</ol>
+										<p>
+											例えば、
+											<br> ライティングのトレーニング
+											<br> ほとんどの部分は宿題で行われます。 アカデミック・モジュールのTASK1は図や表からの読み取れる内容についての解説です。TASK2はトピックに対して自分の意見を理由をつけて述べる問題です。2つのタスクにはそれぞれの文章の冒頭に来るつなぎ言葉（transition
+											words）が違います。最適なつなぎ言葉を使用することによって得点アップに繋がりますので、自分なりのひな型を作ってしまい、本文にフォーカス出来る時間を作ることが短期間での対策には効果的です。
+										</p>
+										<ol>
+											<li>書き方のコツを授業で学ぶ</li>
+											<li>ライティング練習問題の宿題　箇条書き、本文の両方を提出</li>
+											<li>添削してもらった文章の見直しとポイントを授業で確認</li>
+											<li>１～３を繰り返す</li>
+										</ol>
 										<div class="col-sm-12 text-center" style="margin-top: 30px;">
 											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
 										</div>
@@ -464,43 +459,55 @@
 
 							<hr class="hr-dark-blue">
 
-							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="ielts"></div>
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="toeic"></div>
 							<div class="card card-plain card-blog">
 								<div class="row">
 									<div class="col-md-4">
-										<a href="http://www.eiken.or.jp/ielts/" target="_blank">
+										<a href="https://www.iibc-global.org/toeic.html" target="_blank">
 											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/ielts.jpg" />
+												<img class="img img-raised" src="assets/img/examples/card-blog4.jpg" />
 											</div>
 										</a>
 									</div>
 									<div class="col-md-8">
 										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="http://www.eiken.or.jp/ielts/" target="_blank">IELTS</a>
+											<a href="https://www.iibc-global.org/toeic.html" target="_blank">TOEIC</a>
 										</h3>
 										<p>
-											神戸・三宮の英会話サンミハールランゲージサービスは神戸三宮で一番にIELTS（アイエルツ）対策コースを開始したスクールです。IELTS（アイエルツ）のスピーキングと同時にIELTS（アイエルツ）のリーディングやIELTS（アイエルツ）のリスニングでのメモの取り方も授業で学べます。また、IELTSのライティングのポイントは授業で実際の作文の作業は自宅または空き教室で行うので大変経済的です。TOEFL（トフル）対策と同様、各セクションの対策を全般的に行う、または、個々の能力によって必要なセクション用の対策を別々に行うことが出来ます。
-											IELTS （アイエルツ）5.0、5.5、6.0、6.5、7.0、7.5、8.0、8.5、9.0　目標の方の対策です。
-										</p>
+											神戸・三宮の英会話サンミハールランゲージサービスのTOEIC（トーイック）コースは短期集中でのスコアアップが有効です。その方のレベルにより、より早く目標の点数に達するまで指導します。<br>
+											<strong>初心者(中学英語の理解に自信のない方)には基礎から丁寧に授業で学べます。その後以下の対策に進みます。</strong></p>
 										<ol>
-											<li>IELTS （アイエルツ）　ボキャビル対策（語彙を増やす</li>
-											<li>IELTS（アイエルツ） リスニング対策</li>
-											<li>IELTS （アイエルツ）リーディング対策</li>
-											<li>IELTS （アイエルツ）ライティング（作文）対策</li>
-											<li>IELTS （アイエルツ）スピーキング対策</li>
+											<li>模試を受ける。</li>
+											<li>各パートに対しての理解度を「パーセンテージで評価」した分析表を元に弱点を確認する。</li>
+											<li>各問題に対する、また個人にあった勉強方法を無料カウンセリングで細く聞いて計画を立てる。</li>
 										</ol>
+										<p>など、以上は対策の一部です。詳しくはスクールにお問い合わせください。</p>
+										<div class="col-sm-12 text-center" style="margin-top: 30px;">
+											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<hr class="hr-dark-blue">
+
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="eiken"></div>
+							<div class="card card-plain card-blog">
+								<div class="row">
+									<div class="col-md-4">
+										<a href="http://www.eiken.or.jp/eiken/" target="_blank">
+											<div class="card-image">
+												<img class="img img-raised" src="assets/img/examples/eiken.jpg" />
+											</div>
+										</a>
+									</div>
+									<div class="col-md-8">
+										<h3 class="card-title u-margin-top-small-tablet">
+											<a href="http://www.eiken.or.jp/eiken/" target="_blank">英検</a>
+										</h3>
 										<p>
-											例えば、
-											<br> ライティングのトレーニング
-											<br> ほとんどの部分は宿題で行われます。 アカデミック・モジュールのTASK1は図や表からの読み取れる内容についての解説です。TASK2はトピックに対して自分の意見を理由をつけて述べる問題です。2つのタスクにはそれぞれの文章の冒頭に来るつなぎ言葉（transition
-											words）が違います。最適なつなぎ言葉を使用することによって得点アップに繋がりますので、自分なりのひな型を作ってしまい、本文にフォーカス出来る時間を作ることが短期間での対策には効果的です。
+											「過去問を制する者は英検を制する！」英検の一次試験対策はお金をかけず、自宅でひたすら過去問を解くこと。とは言っても、一人でできない、わからないところは、レッスンで日本語で聞いて話して弱点補強し、合格ラインへと押し上げます。一次試験の作文対策は宿題で書いて来られた作文をネイティブ講師に添削してもらうのが、ベスト！一次、二次試験を問わず、サンミハールの単語テストで語彙力アップ！英検１級、準１級、２級、準２級、３級の二次試験の面接対策は神戸・三宮の英会話サンミハールランゲージサービスのネイティブの講師に行ってもらうのが、経済的で効果的。高校１年生で準１級合格の実績！
 										</p>
-										<ol>
-											<li>書き方のコツを授業で学ぶ</li>
-											<li>ライティング練習問題の宿題　箇条書き、本文の両方を提出</li>
-											<li>添削してもらった文章の見直しとポイントを授業で確認</li>
-											<li>１～３を繰り返す</li>
-										</ol>
 										<div class="col-sm-12 text-center" style="margin-top: 30px;">
 											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
 										</div>
