changed japanese text in directions

--- a/index.html
+++ b/index.html
@@ -1174,7 +1174,7 @@
               <div class="u-margin-top-large">
                 <h4 class="info-title text-center">阪神本線<br>神戸三宮駅西口から ―</h4>
                 <p>
-                  神戸三宮駅西口の改札を出て左へ。そごうの手前を右へ行き、突き当たり左手の階段を上がるとセンター街の入り口が見えます。センター街を元町方面へ向かって歩き、2つめの筋が生田ロードです。生田ロードを左に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。（雨の日は三宮・花時計前駅方面へ歩き、三宮・花時計前駅からの案内をご利用下さい）
+                  神戸三宮駅西口の改札を出て左へ。そごうの手前を右へ行き、突き当たり左手の階段を上がるとセンター街の入り口が見えます。センター街を元町方面へ向かって歩き、2つめの筋が生田ロードです。生田ロードを左に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。
                 </p>
               </div>
             </div>
@@ -1194,7 +1194,7 @@
               <div class="u-margin-top-large">
                 <h4 class="info-title text-center">JR神戸線<br>元町駅東口から ―</h4>
                 <p>
-                  元町駅東口の改札を出て右へ。そのまま信号を南に渡ると三宮センター街の入り口が左側に見えてきます。三宮センター街を三宮方面へ向かって歩き信号を一つ渡り、次の大きな筋が生田ロードです。生田ロードを左に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。
+                  元町駅東口の改札を出て右へ。そのまま信号を南に渡ると三宮センター街の入り口が左側に見えてきます。三宮センター街を三宮方面へ向かって歩き信号を一つ渡り、次の大きな筋が生田ロードです。生田ロードを右に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。
                 </p>
               </div>
             </div>
@@ -1203,7 +1203,7 @@
               <div class="u-margin-top-large">
                 <h4 class="info-title text-center">阪神本線・神戸高速線<br>元町駅東口から ―</h4>
                 <p>
-                  元町駅東口の改札を出て左手前の階段を上がるとJR元町東口に出ます。駅前の信号を南に渡ると三宮センター街の入り口が左側に見えてきます。三宮センター街を三宮方面へ向かって歩き信号を一つ渡り、次の大きな筋が生田ロードです。生田ロードを左に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。
+                  元町駅東口の改札を出て左手前の階段を上がるとJR元町東口に出ます。駅前の信号を南に渡ると三宮センター街の入り口が陽右側に見えてきます。三宮センター街を三宮方面へ向かって歩き信号を一つ渡り、次の大きな筋が生田ロードです。生田ロードを左に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。
                 </p>
               </div>
             </div>
