--- a/index.html
+++ b/index.html
@@ -174,27 +174,27 @@
             </a>
             <ul class="dropdown-menu">
               <li>
-                <a href="lesson-course-everyday.html">
+                <a href="lesson-course-everyday.html#kaiwa">
                   日常英会話
                 </a>
               </li>
               <li>
-                <a href="lesson-course-everyday.html">
+                <a href="lesson-course-everyday.html#business">
                   ビジネス英会話
                 </a>
               </li>
               <li>
-                <a href="lesson-course-everyday.html">
+                <a href="lesson-course-everyday.html#prep">
                   海外赴任準備
                 </a>
               </li>
               <li>
-                <a href="lesson-course-toeic.html">
+                <a href="lesson-course-toeic.html#ielts">
                   IELTS・TOEFL
                 </a>
               </li>
               <li>
-                <a href="lesson-course-toeic.html">
+                <a href="lesson-course-toeic.html#toeic">
                   TOEIC・英検
                 </a>
               </li>
@@ -204,32 +204,37 @@
                 </a>
               </li>
               <li>
-                <a href="lesson-course-corporate.html">
+                <a href="lesson-course-corporate.html#corporate">
                   法人向け英語研修
                 </a>
               </li>
               <li>
-                <a href="lesson-course-corporate.html">
+                <a href="lesson-course-corporate.html#english">
                   英文校正サービス
                 </a>
               </li>
               <li>
-                <a href="lesson-course-airline.html">
-                  航空英語・ICAO対策
+                <a href="lesson-course-airline.html#airline">
+                  航空英語
                 </a>
               </li>
               <li>
-                <a href="lesson-course-travel.html">
+                <a href="lesson-course-airline.html#icao">
+                  ICAO対策
+                </a>
+              </li>
+              <li>
+                <a href="lesson-course-travel.html#abroad">
                   留学準備
                 </a>
               </li>
               <li>
-                <a href="lesson-course-travel.html">
+                <a href="lesson-course-travel.html#returnee">
                   帰国子女
                 </a>
               </li>
               <li>
-                <a href="lesson-course-travel.html">
+                <a href="lesson-course-travel.html#kids">
                   子供英会話
                 </a>
               </li>
